Gave some extra padding-left to #appMenu StLabel to prevent app title being overlapped by icon

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -7,6 +7,9 @@
 @import url("extensions/window-overlay/window-overlay.css");
 @import url("extensions/workspace-dock/workspaces-to-dock.css");
 
+/* for some reason this wont work. fixed by enabling #panelLeft border-image in this css. */
+/* @import url("extensions/applications-menu/applications-menu.css"); */ 
+
 /* Text Styles */
 
 /* default text style */
@@ -518,7 +521,7 @@ StScrollBar StButton#vhandle:active {
 }
 
 #panelLeft { 
-    /*border-image: url("t-panel-b.png") 12 12 12 12;*/
+    border-image: url("t-panel-b.png") 12 12 12 12;
 }
 
 #panelCenter { 
@@ -534,6 +537,11 @@ StScrollBar StButton#vhandle:active {
     text-shadow: rgba(255,255,255,0.5) 0px 1px 1px;
     spinner-image: url("process-working.svg");
     spacing: 4px;
+    padding-right: 14px;
+}
+
+#appMenu StLabel {
+    padding-left: 24px;
 }
 
 /* used for the app menu header only */
